--- a/style/styleMEX.css
+++ b/style/styleMEX.css
@@ -33,10 +33,10 @@ nav ul li a{
     background: linear-gradient(90deg, rgba(0,99,65,1) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 60%, rgba(204,17,38,1) 100%);
 }
 .perfil .top .nombre{
-    color: #efb810;
+    color: #804000;
 }
 .perfil .top .descripcion{
-    color: #b1b7b8;
+    color: #000;
     font-weight: bolder;
 }
 .perfil .top .elementos a {
@@ -45,12 +45,14 @@ nav ul li a{
 .contactame{
     /* color: #b1b7b8;
     border: 2px solid #b1b7b8; */
-    color: red;
+    /* background: #efb810;
+    color: red; */
     border: 2px solid #efb810;
-    background: #efb810;
+    color: #8b4513;
+    background: linear-gradient(90deg, rgba(0,99,65,1)0%, rgba(255,255,255,1)34%,rgba(255,255,255,1)75%,rgba(236,16,23,1)100%);
 }
 .contactame:hover{
-    background: #e66767;
+    background: #efb810;
     color: #fff;
 }
 
@@ -162,14 +164,34 @@ nav ul li a{
         margin-left:20%;
     }   
 }
-@media (max-width: 321px){
+@media (max-width: 328px){
+    body{
+        width: 100vw;
+    }
     .escu{
         margin-left: -13%;
     }    
     .cuerpo{
-        width: 72%;
+        width: 80%;
+    }
+    .detalles{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .perfil{
+        width: 325px;
+    }
+    .perfil .top .foto{
+        margin-left: -27px;
+        margin-right: 15px;
     }
     .footerContainer{
         margin-left: 0%;
     }   
+    .socialIcons{
+        margin-left: 34px;
+    }
+    .ulFooter{
+        margin-left: 78px;
+    }
 }
