--- a/style/style.css
+++ b/style/style.css
@@ -138,7 +138,7 @@ nav ul li a:hover{
 
 .cuerpo{
     height: 100vh;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
