--- a/style/styleMEX.css
+++ b/style/styleMEX.css
@@ -1,8 +1,11 @@
-
+body{
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-x: none;
+}
 nav{
     background: linear-gradient(90deg, rgba(0,99,65,1) 0%, rgba(255,255,255,1) 33%, rgba(255,255,255,1) 67%, rgba(204,17,38,1) 100%);
     border: solid 1px black;
-    width: 100vw;
 }
 .logo{
     float: left;
@@ -23,6 +26,9 @@ nav ul li a{
     color: maroon;
 }
 
+.cuerpo{
+    width: 90%;
+}
 
 
 .perfil .top{
@@ -129,6 +135,12 @@ nav ul li a{
     }    
 }
 @media (max-width: 574px){
+    .perfil{
+        margin-top: 20%;
+    }
+    .footer{
+        margin-top: 30%;
+    }
     .footerContainer {
         margin-left: 0%;
     }    
@@ -144,6 +156,7 @@ nav ul li a{
     }
     .footerContainer{
         margin-left: 21%;
+        width: 79%;
     }   
 }
 @media (max-width: 376px){
@@ -162,6 +175,7 @@ nav ul li a{
     }
     .footerContainer{
         margin-left:20%;
+        width: 79%;
     }   
 }
 @media (max-width: 328px){
@@ -172,7 +186,7 @@ nav ul li a{
         margin-left: -13%;
     }    
     .cuerpo{
-        width: 80%;
+        width: 65%;
     }
     .detalles{
         padding-left: 0px;
@@ -193,5 +207,13 @@ nav ul li a{
     }
     .ulFooter{
         margin-left: 78px;
+    }
+}
+@media (max-height: 500px) and (max-width: 920px){
+    header{
+        margin-bottom: 40%;
+    }
+    .footer{
+        margin-top: 93%;
     }
 }
