correccion de pantallas generales

--- a/style/styleMEX.css
+++ b/style/styleMEX.css
@@ -242,7 +242,7 @@ nav ul li a{
 }
 @media (min-height: 325px) and (min-width: 615px) {
 	header{
-		padding-botton: 45%;
+		padding-bottom: 45%;
 	}
 	footer{
 		margin-top: 50%;
