--- a/style/style.css
+++ b/style/style.css
@@ -382,8 +382,140 @@ ul{
 
 
 
+/* //////////////////////////////////////////////////////////////
+reponsividad de pagina
+////////////////////////////////////////////////////////////// */
 
-
+@media (min-width: 1441px) and (max-width: 1800px){
+}
+@media (max-width: 1440px){
+}
+@media (min-width: 1054px) and (max-width: 1163px){
+}
+@media (min-width: 1026px) and (max-width: 1053px){
+}
+@media (max-width: 1025px){
+}
+@media (max-width: 1024px) and (max-height: 750px){
+    header{
+        padding-bottom: 20%;
+    }
+}
+@media (min-width: 858px) and (max-width: 1006px){
+    nav ul li a{
+        font-size: 14px;    
+    }
+    .footerContainer{
+        margin-left: 34%;
+    }    
+}
+@media (min-width: 768px){
+    .footerContainer{
+        margin-left: 35%;
+    }    
+}
+@media (max-width: 707px){
+}
+@media (max-width: 574px){
+    .perfil{
+        margin-top: 20%;
+    }
+    .footer{
+        margin-top: 30%;
+    }
+    .footerContainer {
+        margin-left: 0%;
+    }    
+    .footerContainer .socialIcons a{
+        margin-left: 0%;
+    }
+}
+@media(max-width: 488px){
+    .escu{
+        margin-left: -3%;
+    }
+}
+@media (max-width: 426px){
+    .footerContainer{
+        margin-left: 21%;
+        width: 79%;
+    }   
+}
+@media (max-width: 376px){
+    header{
+        padding-bottom: 20%;
+    }
+    .cuerpo{
+        width: 79%;
+        margin-left: 10%;
+    }
+    .perfil{
+        width: 345px;;
+    }
+    .footerContainer{
+        margin-left:20%;
+        width: 79%;
+    }   
+}
+@media(min-width: 329px) and (max-width:360px){
+}
+@media (max-width: 328px){
+    body{
+        width: 100vw;
+    }   
+    .cuerpo{
+        width: 65%;
+    }
+    .detalles{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .perfil{
+        width: 325px;
+    }
+    .perfil .top .foto{
+        margin-left: -27px;
+        margin-right: 15px;
+    }
+    .footerContainer{
+        margin-left: 0%;
+    }   
+    .socialIcons{
+        margin-left: 34px;
+    }
+    .ulFooter{
+        margin-left: 78px;
+    }
+}
+@media (min-height: 701px) and (max-height: 850px){
+    header{
+        margin-bottom: 40%;
+    }
+}
+@media (max-height: 500px) and (max-width: 920px){
+    header{
+        margin-bottom: 40%;
+    }
+    .footer{
+        margin-top: 93%;
+    }
+}
+@media (min-height: 325px) and (min-width: 615px) and (max-width: 810px){
+	header{
+		padding-bottom: 45%;
+	}
+	footer{
+		margin-top: 50%;
+	}
+}
+@media (max-height: 700px) and (max-width: 700px){
+    header{
+        padding-bottom: 45%;
+    }
+    .footer{
+        margin-top: 75%;
+    }
+}
 
 
 
