--- a/style/style.css
+++ b/style/style.css
@@ -419,6 +419,7 @@ reponsividad de pagina
 @media (max-width: 574px){
     .perfil{
         margin-top: 20%;
+        width: 320px;
     }
     .footer{
         margin-top: 45%;
