--- a/style/styleGen.css
+++ b/style/styleGen.css
@@ -9,7 +9,7 @@ nav{
     background: radial-gradient(circle, rgba(166,165,165,1) 0%, rgba(238,238,240,1) 100%);
 }
 .perfil .top .foto{
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(153,153,153,1) 100%);
+    background: #000;
 }
 .perfil .top .nombre {
     color: #000;
