--- a/style/styleGen.css
+++ b/style/styleGen.css
@@ -9,10 +9,10 @@ nav{
     background: radial-gradient(circle, rgba(166,165,165,1) 0%, rgba(238,238,240,1) 100%);
 }
 .perfil .top .foto{
-    background: #000;
+    background: linear-gradient(90deg, rgba(131,58,180,0.7455357142857143) 0%, rgba(65,162,186,1) 100%);
 }
 .perfil .top .nombre {
-    color: #000;
+    color:purple;
 }
 .perfil .top .descripcion{
     color: #000000;
@@ -32,7 +32,7 @@ nav{
 }
 
 .button{
-    background: #f4f4f4;
+    background: linear-gradient(90deg, rgba(131,58,180,0.7455357142857143) 0%, rgba(65,162,186,1) 100%);;
 }
 
 .footerContainer ul li a{
@@ -46,7 +46,7 @@ nav{
 }
 .footerContainer .socialIcons a{
 	background-color: #adadad;
-	color: #833ab4;
+	color: linear-gradient(90deg, rgba(131,58,180,0.7455357142857143) 0%, rgba(65,162,186,1) 100%);;
 }
 .footerContainer .socialIcons a:hover{
 	color: #833ab4;
