--- a/style/styleDMa.css
+++ b/style/styleDMa.css
@@ -38,7 +38,7 @@ nav{
 .footerContainer ul li a{
 	/* color: #ffffff;
 	color: #a23a61; */
-    color: black;
+    color: #000;
     font-weight: bold;
 }
 
@@ -56,7 +56,7 @@ nav{
 }
 .footerBottom{
 	text-align: center;
-	color: black;
+	color: #000;
     font-weight: bold;
 
 }
