--- a/style/styleDT.css
+++ b/style/styleDT.css
@@ -47,8 +47,8 @@ nav{
 	padding-left: 8px;
 }
 .footerContainer .socialIcons a{
-	background-color: rgba(255,255,255,0.2);
-    color: rgba(167,100,74,1);
+    background-color: #efc045;
+    color: rgba(167,100,74,1)
 }
 .footerContainer .socialIcons a:hover{
 	color: #a23a61;
