prueba de despliege en iframe

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+iframe{
+    width: 100vw;
+    height: 900px;
+    overflow: hidden;
+}
 body{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
@@ -22,7 +27,7 @@ body{
     font-weight: bold   ;
 }
 header{
-    padding-bottom: 10%;
+    padding-bottom: 22%;
 }
 .navi{
     padding: 0;
@@ -278,7 +283,7 @@ nav ul li a:hover{
 
 
 footer{
-    margin-top: 12%;
+    margin-top: 24%;
 }
 .footerContainer{
 	max-width: 1170px;
