--- a/style/style.css
+++ b/style/style.css
@@ -423,11 +423,11 @@ reponsividad de pagina
 }
 @media (max-width: 574px){
     .perfil{
-        margin-top: 20%;
+        margin-top: 155vh;
         width: 320px;
     }
     .footer{
-        margin-top: 45%;
+        margin-top: 1600vh;
     }
     .footerContainer {
         margin-left: 0%;
@@ -513,8 +513,11 @@ reponsividad de pagina
 	header{
 		padding-bottom: 45%;
 	}
+    .perfil{
+        margin-top: 175vh;
+    }
 	footer{
-		margin-top: 50%;
+		margin-top: 215vh;
 	}
 }
 @media (max-height: 700px) and (max-width: 700px){
@@ -525,7 +528,14 @@ reponsividad de pagina
         margin-top: 85%;
     }
 }
-
+@media (min-height: 1023px){
+    .perfil{
+        margin-top: 70vh;
+    }
+    .footer{
+        margin-top: 100vh;
+    }
+}
 
 
 
