correccion de cuerpo para mas dispositivos

--- a/style/style.css
+++ b/style/style.css
@@ -266,6 +266,7 @@ nav ul li a:hover{
     .perfil{
         width: 55%;
         text-align: center;
+        margin-top: 30vh;
     }
 }
 @media (max-width: 1150px){
@@ -297,6 +298,7 @@ ul{
 .footer{
 	/* background-color: #24262b; */
     padding: 15px 0;
+    margin-top: 50vh;
 }
 .footerContainer{
    width: 25%;
@@ -427,7 +429,7 @@ reponsividad de pagina
         width: 320px;
     }
     .footer{
-        margin-top: 1600vh;
+        margin-top: 160vh;
     }
     .footerContainer {
         margin-left: 0%;
@@ -522,22 +524,36 @@ reponsividad de pagina
 }
 @media (max-height: 700px) and (max-width: 700px){
     header{
-        padding-bottom: 45%;
+        padding-bottom: 50%;
     }
     .footer{
-        margin-top: 85%;
+        margin-top: 210vh;
     }
 }
-@media (min-height: 1023px){
+@media (width: 768px){
     .perfil{
-        margin-top: 70vh;
+        margin-top: 65vh;
     }
-    .footer{
-        margin-top: 100vh;
-    }
+	.footer{
+		margin-top: 90vh;
+	}
 }
-
-
+@media (width: 1114px){
+    .perfil{
+        margin-top: 75vh;
+    }
+	.footer{
+		margin-top: 110vh;
+	}
+}
+@media (min-width: 1200px) and (max-width: 1360px){
+    .perfil{
+        margin-top: 75vh;
+    }
+	.footer{
+		margin-top: 110vh;
+	}
+}
 
 
 
